--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 .app {
 
   display:flex;
+  flex-direction: column;
   padding:30px;
 }
 
@@ -15,4 +16,9 @@
 .game img {
   width:70px;
   height:70px;
+}
+
+.score-board{
+
+  font-size: 50px;
 }
