--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,6 @@
-.app {
-
-  display:flex;
-  flex-direction: column;
-  padding:30px;
-}
-
-.game{
-  width:560px;
-  height: 560px;
-  display: flex;
-  flex-wrap: wrap;
+body{
+  margin: 0 auto;
+  background-color: rgb(70,70,70);
 
 }
 
-.game img {
-  width:70px;
-  height:70px;
-}
-
-.score-board{
-
-  font-size: 50px;
-}
